--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
 			navigationInstructionsInitiallyVisible: false,
 			geocoder: false,
 			//時間を使うときは以下の二行をコメントアウト
-			timeline: false,
-			animation: false,
+			timeline: true,
+			animation: true,
 			sceneModePicker: false,
 			baseLayerPicker: false,
 			scene3DOnly: true,
